unpackaged/main/default/objects/Purchased_Product_Transaction__c/Purchased_Product_Transaction__c.object-meta.xml
<CustomObject>
    <label>Purchased Product Transaction</label>
    <nameField>
        <label>Purchased Product Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased Product Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>