unpackaged/main/default/objects/Purchased_Product_Transaction__c/fields/ARR_Growth__c.field-meta.xml
<CustomField>
    <fullName>ARR_Growth__c</fullName>
    <label>ARR Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>