unpackaged/main/default/objects/Purchased_Product_Transaction__c/fields/Line_Classification__c.field-meta.xml
<CustomField>
    <fullName>Line_Classification__c</fullName>
    <label>Line Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>