unpackaged/main/default/objects/Purchased_Product_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Purchased_Product_Transaction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>