unpackaged/main/default/objects/Purchased_Product_Transaction__c/fields/Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchased Product</label>
    <referenceTo>Purchased_Product__c</referenceTo>
    <relationshipLabel>Purchased Product Transactions</relationshipLabel>
    <relationshipName>Purchased_Product_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>