unpackaged/main/default/objects/Purchased_Product_Transaction__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>SBQQ__Subscription__c</referenceTo>
    <relationshipName>Purchased_Product_Transaction_Records</relationshipName>
    <type>Lookup</type>
</CustomField>